--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,5 +35,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Drama'
 - !lcc 'PT'
+- GITenberg
 title: 'The Stranger: A Drama, in Five Acts'
 url: http://www.gutenberg.org/ebooks/20217
